fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -185,3 +185,12 @@ button:hover {
     font-size: 16px; /* Prevents iOS zoom on focus */
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE, Edge */
+  scrollbar-width: none;     /* Firefox */
+}
